--- a/LUJEWebsite.app/Pages/Portal/Request.cshtml
+++ b/LUJEWebsite.app/Pages/Portal/Request.cshtml
@@ -2,7 +2,8 @@
 @using Newtonsoft.Json.Linq;
 @using LUJEWebsite.app.Extentions;
 @using LUJEWebsite.app.Model;
-@using MySqlConnector;
+@using Npgsql;
+@using NpgsqlTypes;
 @using System.Collections;
 @using LUJEWebsite.app.Utils;
 @{
@@ -49,7 +50,7 @@
 			return;
 		}
 	}
-	if (HttpContext.Session.Get<Boolean>("admin") != null && HttpContext.Session.Get<Boolean>("loggedin") == true)
+	if (HttpContext.Session.Get<Boolean>("admin") != null && HttpContext.Session.Get<Boolean>("admin") == true)
 	{
 		admin = true;
 	}
@@ -64,16 +65,14 @@
 		{
 			Profile profile = HttpContext.Session.Get<Profile>("profile");
 			string asn = "AS" + selectedNetwork.asn;
-			MySqlConnection luje_conn = new MySqlConnection(Configuration.DBPath);
+			NpgsqlConnection luje_conn = new NpgsqlConnection(Configuration.DBPath);
 			luje_conn.Open();
 
-			MySqlCommand luje_cmd = new MySqlCommand("select peeringdb_network_ixlan.ixlan_id, peeringdb_network_ixlan.ipaddr4, peeringdb_network_ixlan.ipaddr6 from peeringdb.peeringdb_network_ixlan where asn = @portalowner and ixlan_id = @lanid;", luje_conn);
+			NpgsqlCommand luje_cmd = new NpgsqlCommand("select peeringdb_network_ixlan.ixlan_id, peeringdb_network_ixlan.ipaddr4, peeringdb_network_ixlan.ipaddr6 from peeringdb_network_ixlan where asn = @portalowner and ixlan_id = @lanid;", luje_conn);
+			luje_cmd.Parameters.AddWithValue("@portalowner", NpgsqlDbType.Integer, Convert.ToInt32(Configuration.PortalOwnerAsn));
+			luje_cmd.Parameters.AddWithValue("@lanid", NpgsqlDbType.Integer, Convert.ToInt32(lanid));
 			luje_cmd.Prepare();
-			luje_cmd.Parameters.AddWithValue("@portalowner", Configuration.PortalOwnerAsn);
-			luje_cmd.Prepare();
-
-			luje_cmd.Parameters.AddWithValue("@lanid", lanid);
-			MySqlDataReader luje_rdr = luje_cmd.ExecuteReader();
+			NpgsqlDataReader luje_rdr = luje_cmd.ExecuteReader();
 			if (luje_rdr.Read())
 			{
 				if (addrv == "4" && luje_rdr["ipaddr4"] == null)
@@ -99,12 +98,11 @@
 				return;
 			}
 
-			luje_cmd = new MySqlCommand("select peeringdb_network_ixlan.id, peeringdb_ix.name, peeringdb_network_ixlan.net_id, peeringdb_network_ixlan.ixlan_id, peeringdb_network_ixlan.ipaddr4, peeringdb_network_ixlan.ipaddr6, peeringdb_network.irr_as_set from peeringdb.peeringdb_network_ixlan inner join peeringdb.peeringdb_network on peeringdb_network.id = peeringdb_network_ixlan.net_id inner join peeringdb.peeringdb_ixlan on peeringdb_ixlan.id = peeringdb_network_ixlan.ixlan_id inner join peeringdb.peeringdb_ix on peeringdb_ix.id = peeringdb_ixlan.ix_id where peeringdb_network_ixlan.asn = @asn and peeringdb_network_ixlan.id = @id and peeringdb_network_ixlan.ixlan_id = @lanid;", luje_conn);
+			luje_cmd = new NpgsqlCommand("select peeringdb_network_ixlan.id, peeringdb_ix.name, peeringdb_network_ixlan.net_id, peeringdb_network_ixlan.ixlan_id, peeringdb_network_ixlan.ipaddr4, peeringdb_network_ixlan.ipaddr6, peeringdb_network.irr_as_set from peeringdb_network_ixlan inner join peeringdb_network on peeringdb_network.id = peeringdb_network_ixlan.net_id inner join peeringdb_ixlan on peeringdb_ixlan.id = peeringdb_network_ixlan.ixlan_id inner join peeringdb_ix on peeringdb_ix.id = peeringdb_ixlan.ix_id where peeringdb_network_ixlan.asn = @asn and peeringdb_network_ixlan.id = @id and peeringdb_network_ixlan.ixlan_id = @lanid;", luje_conn);
+			luje_cmd.Parameters.AddWithValue("@asn", NpgsqlDbType.Integer, selectedNetwork.asn);
+			luje_cmd.Parameters.AddWithValue("@id", NpgsqlDbType.Integer, Convert.ToInt32(addrid));
+			luje_cmd.Parameters.AddWithValue("@lanid", NpgsqlDbType.Integer, Convert.ToInt32(lanid));
 			luje_cmd.Prepare();
-
-			luje_cmd.Parameters.AddWithValue("@asn", selectedNetwork.asn);
-			luje_cmd.Parameters.AddWithValue("@id", addrid);
-			luje_cmd.Parameters.AddWithValue("@lanid", lanid);
 			luje_rdr = luje_cmd.ExecuteReader();
 			string address = "";
 			string netid = "";
@@ -163,9 +161,9 @@
 				return;
 			}
 
-			luje_cmd = new MySqlCommand("select peering_id from peering where peering_peeringdb_id = @peeringdb_id and peering_deleted = 0;", luje_conn);
+			luje_cmd = new NpgsqlCommand("select peering_id from peering where peering_peeringdb_id = @peeringdb_id and peering_deleted = false;", luje_conn);
+			luje_cmd.Parameters.AddWithValue("@peeringdb_id", NpgsqlDbType.Integer, selectedNetwork.id);
 			luje_cmd.Prepare();
-			luje_cmd.Parameters.AddWithValue("@peeringdb_id", selectedNetwork.id);
 			luje_rdr = luje_cmd.ExecuteReader();
 
 			string peering_id = "";
@@ -178,17 +176,17 @@
 			else
 			{
 				luje_rdr.Close();
-				luje_cmd = new MySqlCommand("insert into peering (peering_peeringdb_id, peering_name, peering_as_set, peering_asn, peering_active, peering_deployed, peering_created, peering_modified, peering_deleted) values(@peeringdb_id, @name, @asset, @asn, 0, 0, NOW(), NOW(), 0);", luje_conn);
+				luje_cmd = new NpgsqlCommand("insert into peering (peering_peeringdb_id, peering_name, peering_as_set, peering_asn, peering_active, peering_deployed, peering_created, peering_modified, peering_deleted) values(@peeringdb_id, @name, @asset, @asn, false, false, NOW(), NOW(), false);", luje_conn);
+				luje_cmd.Parameters.AddWithValue("@peeringdb_id", NpgsqlDbType.Integer, selectedNetwork.id);
+				luje_cmd.Parameters.AddWithValue("@name", NpgsqlDbType.Varchar, selectedNetwork.name);
+				luje_cmd.Parameters.AddWithValue("@asset", NpgsqlDbType.Varchar, asset);
+				luje_cmd.Parameters.AddWithValue("@asn", NpgsqlDbType.Integer, selectedNetwork.asn);
 				luje_cmd.Prepare();
-				luje_cmd.Parameters.AddWithValue("@peeringdb_id", selectedNetwork.id);
-				luje_cmd.Parameters.AddWithValue("@name", selectedNetwork.name);
-				luje_cmd.Parameters.AddWithValue("@asset", asset);
-				luje_cmd.Parameters.AddWithValue("@asn", selectedNetwork.asn);
 				luje_cmd.ExecuteNonQuery();
-				
-				luje_cmd = new MySqlCommand("select peering_id from peering where peering_peeringdb_id = @peeringdb_id and peering_deleted = 0;", luje_conn);
-				luje_cmd.Prepare();
+
+				luje_cmd = new NpgsqlCommand("select peering_id from peering where peering_peeringdb_id = @peeringdb_id and peering_deleted = false;", luje_conn);
 				luje_cmd.Parameters.AddWithValue("@peeringdb_id", selectedNetwork.id);
+				luje_cmd.Prepare();
 				luje_rdr = luje_cmd.ExecuteReader();
 				if (luje_rdr.Read())
 				{
@@ -197,12 +195,12 @@
 				luje_rdr.Close();
 			}
 
-			luje_cmd = new MySqlCommand("select peering_ips_active, peering_ips_deployed from peering_ips inner join peering on peering.peering_id = peering_ips_peering_id and peering_deleted = 0 where peering_ips_peeringdb_lanid = @lanid and peering_ips_peeringdb_addrid = @addrid and peering_ips_type = @type and peering_peeringdb_id = @peeringdb_id and peering_ips_deleted = 0;", luje_conn);
+			luje_cmd = new NpgsqlCommand("select peering_ips_active, peering_ips_deployed from peering_ips inner join peering on peering.peering_id = peering_ips_peering_id and peering_deleted = false where peering_ips_peeringdb_lanid = @lanid and peering_ips_peeringdb_addrid = @addrid and peering_ips_type = @type and peering_peeringdb_id = @peeringdb_id and peering_ips_deleted = false;", luje_conn);
+			luje_cmd.Parameters.AddWithValue("@peeringdb_id", NpgsqlDbType.Integer, selectedNetwork.id);
+			luje_cmd.Parameters.AddWithValue("@addrid", NpgsqlDbType.Integer, Convert.ToInt32(addrid));
+			luje_cmd.Parameters.AddWithValue("@lanid", NpgsqlDbType.Integer, Convert.ToInt32(lanid));
+			luje_cmd.Parameters.AddWithValue("@type", NpgsqlDbType.Integer, Convert.ToInt32(addrv));
 			luje_cmd.Prepare();
-			luje_cmd.Parameters.AddWithValue("@peeringdb_id", selectedNetwork.id);
-			luje_cmd.Parameters.AddWithValue("@addrid", addrid);
-			luje_cmd.Parameters.AddWithValue("@lanid", lanid);
-			luje_cmd.Parameters.AddWithValue("@type", addrv);
 			luje_rdr = luje_cmd.ExecuteReader();
 
 			if (luje_rdr.Read())
@@ -212,14 +210,14 @@
 			else
 			{
 				luje_rdr.Close();
-				luje_cmd = new MySqlCommand("insert into peering_ips (peering_ips_peering_id, peering_ips_peeringdb_lanid, peering_ips_peeringdb_addrid, peering_ips_type, peering_ips_addr, peering_ips_active, peering_ips_rejected, peering_ips_deployed, peering_ips_notified, peering_ips_notified_skip, peering_ips_notified_approval, peering_ips_notified_email, peering_ips_created, peering_ips_modified, peering_ips_deleted) values(@peering_id, @lanid, @addrid, @type, @addr, 0, 0, 0, 0, 0, 0, @email, NOW(), NOW(), 0);", luje_conn);
+				luje_cmd = new NpgsqlCommand("insert into peering_ips (peering_ips_peering_id, peering_ips_peeringdb_lanid, peering_ips_peeringdb_addrid, peering_ips_type, peering_ips_addr, peering_ips_active, peering_ips_rejected, peering_ips_deployed, peering_ips_notified, peering_ips_notified_skip, peering_ips_notified_approval, peering_ips_notified_email, peering_ips_created, peering_ips_modified, peering_ips_deleted) values(@peering_id, @lanid, @addrid, @type, @addr, false, false, false, false, false, false, @email, NOW(), NOW(), false);", luje_conn);
+				luje_cmd.Parameters.AddWithValue("@peering_id", NpgsqlDbType.Integer, Convert.ToInt32(peering_id));
+				luje_cmd.Parameters.AddWithValue("@lanid", NpgsqlDbType.Integer, Convert.ToInt32(lanid));
+				luje_cmd.Parameters.AddWithValue("@addrid", NpgsqlDbType.Integer, Convert.ToInt32(addrid));
+				luje_cmd.Parameters.AddWithValue("@type", NpgsqlDbType.Integer, Convert.ToInt32(addrv));
+				luje_cmd.Parameters.AddWithValue("@addr", NpgsqlDbType.Varchar, address);
+				luje_cmd.Parameters.AddWithValue("@email", NpgsqlDbType.Varchar, profile.email);
 				luje_cmd.Prepare();
-				luje_cmd.Parameters.AddWithValue("@peering_id", peering_id);
-				luje_cmd.Parameters.AddWithValue("@lanid", lanid);
-				luje_cmd.Parameters.AddWithValue("@addrid", addrid);
-				luje_cmd.Parameters.AddWithValue("@type", addrv);
-				luje_cmd.Parameters.AddWithValue("@addr", address);
-				luje_cmd.Parameters.AddWithValue("@email", profile.email);
 				luje_cmd.ExecuteNonQuery();
 			}
 
