--- a/LUJEWebsite.app/Pages/Peers.cshtml
+++ b/LUJEWebsite.app/Pages/Peers.cshtml
@@ -1,14 +1,14 @@
 ﻿@page
-@using MySqlConnector;
+@using Npgsql;
 @using LUJEWebsite.app.Utils;
 @{
     ViewData["Title"] = "Peers";
     try	
     {
-		MySqlConnection luje_conn = new MySqlConnection(Configuration.DBPath);
+		NpgsqlConnection luje_conn = new NpgsqlConnection(Configuration.DBPath);
 		luje_conn.Open();
-		MySqlCommand luje_cmd = new MySqlCommand("select peeringdb_network.name, peeringdb_network.asn from luje.peering INNER JOIN peeringdb.peeringdb_network ON peeringdb_network.id = peering_peeringdb_id where peering_active = 1 and peering_deleted = 0 order by cast(peering_asn as unsigned) asc;", luje_conn);
-		MySqlDataReader luje_rdr = luje_cmd.ExecuteReader();
+		NpgsqlCommand luje_cmd = new NpgsqlCommand("select peeringdb_network.name, peeringdb_network.asn from peering INNER JOIN peeringdb_network ON peeringdb_network.id = peering_peeringdb_id where peering_active = true and peering_deleted = false order by cast(peering_asn as integer) asc;", luje_conn);
+		NpgsqlDataReader luje_rdr = luje_cmd.ExecuteReader();
 
 		<div class="columns nine">
 			<h2>Peers</h2>
