--- a/LUJEWebsite.app/Pages/Portal/Extra.cshtml
+++ b/LUJEWebsite.app/Pages/Portal/Extra.cshtml
@@ -2,7 +2,8 @@
 @using Newtonsoft.Json.Linq;
 @using LUJEWebsite.app.Extentions;
 @using LUJEWebsite.app.Model;
-@using MySqlConnector;
+@using Npgsql;
+@using NpgsqlTypes;
 @using System.Collections;
 @using LUJEWebsite.app.Utils;
 @{
@@ -31,7 +32,7 @@ else
 	{
 		Profile profile = HttpContext.Session.Get<Profile>("profile");
 
-		MySqlConnection luje_conn = new MySqlConnection(Configuration.DBPath);
+		NpgsqlConnection luje_conn = new NpgsqlConnection(Configuration.DBPath);
 		luje_conn.Open();
 
 		string asnQuery = Request.Query["asn"];
@@ -40,10 +41,10 @@ else
 		string peeringdb_id = "";
 		string asset = "";
 
-		MySqlCommand luje_cmd = new MySqlCommand("select peeringdb_network.id, peeringdb_network.name, peeringdb_network.irr_as_set from peeringdb.peeringdb_network where asn = @asn;", luje_conn);
+		NpgsqlCommand luje_cmd = new NpgsqlCommand("select peeringdb_network.id, peeringdb_network.name, peeringdb_network.irr_as_set from peeringdb_network where asn = @asn;", luje_conn);
+		luje_cmd.Parameters.AddWithValue("@asn", NpgsqlDbType.Integer, Convert.ToInt32(asnQuery));
 		luje_cmd.Prepare();
-		luje_cmd.Parameters.AddWithValue("@asn", asnQuery);
-		MySqlDataReader luje_rdr = luje_cmd.ExecuteReader();
+		NpgsqlDataReader luje_rdr = luje_cmd.ExecuteReader();
 
 		if (luje_rdr.Read())
 		{
@@ -91,9 +92,9 @@ else
 			return;
 		}
 
-		luje_cmd = new MySqlCommand("select peering_id from peering where peering_peeringdb_id = @peeringdb_id and peering_deleted = 0;", luje_conn);
+		luje_cmd = new NpgsqlCommand("select peering_id from peering where peering_peeringdb_id = @peeringdb_id and peering_deleted = false;", luje_conn);
+		luje_cmd.Parameters.AddWithValue("@peeringdb_id", NpgsqlDbType.Integer, Convert.ToInt32(peeringdb_id));
 		luje_cmd.Prepare();
-		luje_cmd.Parameters.AddWithValue("@peeringdb_id", peeringdb_id);
 		luje_rdr = luje_cmd.ExecuteReader();
 
 		string peering_id = "";
@@ -106,17 +107,17 @@ else
 		else
 		{
 			luje_rdr.Close();
-			luje_cmd = new MySqlCommand("insert into peering (peering_peeringdb_id, peering_name, peering_as_set, peering_asn, peering_active, peering_deployed, peering_created, peering_modified, peering_deleted) values(@peeringdb_id, @name, @asset, @asn, 1, 0, NOW(), NOW(), 0);", luje_conn);
+			luje_cmd = new NpgsqlCommand("insert into peering (peering_peeringdb_id, peering_name, peering_as_set, peering_asn, peering_active, peering_deployed, peering_created, peering_modified, peering_deleted) values(@peeringdb_id, @name, @asset, @asn, true, false, NOW(), NOW(), false);", luje_conn);
+			luje_cmd.Parameters.AddWithValue("@peeringdb_id", NpgsqlDbType.Integer, Convert.ToInt32(peeringdb_id));
+			luje_cmd.Parameters.AddWithValue("@name", NpgsqlDbType.Varchar, networkName);
+			luje_cmd.Parameters.AddWithValue("@asset", NpgsqlDbType.Varchar, asset);
+			luje_cmd.Parameters.AddWithValue("@asn", NpgsqlDbType.Integer, Convert.ToInt32(asnQuery));
 			luje_cmd.Prepare();
-			luje_cmd.Parameters.AddWithValue("@peeringdb_id", peeringdb_id);
-			luje_cmd.Parameters.AddWithValue("@name", networkName);
-			luje_cmd.Parameters.AddWithValue("@asset", asset);
-			luje_cmd.Parameters.AddWithValue("@asn", asnQuery);
 			luje_cmd.ExecuteNonQuery();
 
-			luje_cmd = new MySqlCommand("select peering_id from peering where peering_peeringdb_id = @peeringdb_id and peering_deleted = 0;", luje_conn);
+			luje_cmd = new NpgsqlCommand("select peering_id from peering where peering_peeringdb_id = @peeringdb_id and peering_deleted = false;", luje_conn);
+			luje_cmd.Parameters.AddWithValue("@peeringdb_id", NpgsqlDbType.Integer, Convert.ToInt32(peeringdb_id));
 			luje_cmd.Prepare();
-			luje_cmd.Parameters.AddWithValue("@peeringdb_id", peeringdb_id);
 			luje_rdr = luje_cmd.ExecuteReader();
 			if (luje_rdr.Read())
 			{
@@ -128,32 +129,32 @@ else
 		//delete address
 		if (addrid != "")
 		{
-			luje_cmd = new MySqlCommand("select peering_ips_extra_active, peering_ips_extra_deployed, peering_ips_extra_id from peering_ips_extra inner join peering on peering.peering_id = peering_ips_extra_peering_id and peering_deleted = 0 where peering_ips_extra_id = @addrid and peering_peeringdb_id = @peeringdb_id and peering_ips_extra_deleted = 0;", luje_conn);
+			luje_cmd = new NpgsqlCommand("select peering_ips_extra_active, peering_ips_extra_deployed, peering_ips_extra_id from peering_ips_extra inner join peering on peering.peering_id = peering_ips_extra_peering_id and peering_deleted = false where peering_ips_extra_id = @addrid and peering_peeringdb_id = @peeringdb_id and peering_ips_extra_deleted = false;", luje_conn);
+			luje_cmd.Parameters.AddWithValue("@peeringdb_id", NpgsqlDbType.Integer, Convert.ToInt32(peeringdb_id));
+			luje_cmd.Parameters.AddWithValue("@addrid", NpgsqlDbType.Integer, Convert.ToInt32(addrid));
 			luje_cmd.Prepare();
-			luje_cmd.Parameters.AddWithValue("@peeringdb_id", peeringdb_id);
-			luje_cmd.Parameters.AddWithValue("@addrid", addrid);
 			luje_rdr = luje_cmd.ExecuteReader();
 
 			if (luje_rdr.Read())
 			{
 				string peering_ips_extra_id = luje_rdr["peering_ips_extra_id"].ToString();
 				luje_rdr.Close();
-				luje_cmd = new MySqlCommand("update peering_ips_extra set peering_ips_extra_deleted = '1', peering_ips_extra_modified = NOW() where peering_ips_extra_id = @peering_ips_extra_id and peering_ips_extra_deleted = '0';", luje_conn);
+				luje_cmd = new NpgsqlCommand("update peering_ips_extra set peering_ips_extra_deleted = true, peering_ips_extra_modified = NOW() where peering_ips_extra_id = @peering_ips_extra_id and peering_ips_extra_deleted = false;", luje_conn);
+				luje_cmd.Parameters.AddWithValue("@peering_ips_extra_id", NpgsqlDbType.Integer, Convert.ToInt32(peering_ips_extra_id));
 				luje_cmd.Prepare();
-				luje_cmd.Parameters.AddWithValue("@peering_ips_extra_id", peering_ips_extra_id);
 				luje_cmd.ExecuteNonQuery();
 
-				luje_cmd = new MySqlCommand("select peering.peering_id from peering_ips_extra inner join peering on peering.peering_id = peering_ips_extra.peering_ips_extra_peering_id and peering.peering_deleted = 0 where peering_ips_extra_deleted = 0 and peering.peering_id = @peering_id;", luje_conn);
+				luje_cmd = new NpgsqlCommand("select peering.peering_id from peering_ips_extra inner join peering on peering.peering_id = peering_ips_extra.peering_ips_extra_peering_id and peering.peering_deleted = false where peering_ips_extra_deleted = false and peering.peering_id = @peering_id;", luje_conn);
+				luje_cmd.Parameters.AddWithValue("@peering_id", NpgsqlDbType.Integer, Convert.ToInt32(peering_id));
 				luje_cmd.Prepare();
-				luje_cmd.Parameters.AddWithValue("@peering_id", peering_id);
 				luje_rdr = luje_cmd.ExecuteReader();
 
 				if (!luje_rdr.Read())
 				{
 					luje_rdr.Close();
-					luje_cmd = new MySqlCommand("update peering set peering_deleted = '1', peering_modified = NOW() where peering_id = @peering_id and peering_deleted = '0';", luje_conn);
+					luje_cmd = new NpgsqlCommand("update peering set peering_deleted = true, peering_modified = NOW() where peering_id = @peering_id and peering_deleted = false;", luje_conn);
+					luje_cmd.Parameters.AddWithValue("@peering_id", NpgsqlDbType.Integer, Convert.ToInt32(peering_id));
 					luje_cmd.Prepare();
-					luje_cmd.Parameters.AddWithValue("@peering_id", peering_id);
 					luje_cmd.ExecuteNonQuery();
 				}
 				else
@@ -171,10 +172,10 @@ else
 		if (addr != "")
 		{
 			luje_rdr.Close();
-			luje_cmd = new MySqlCommand("insert into peering_ips_extra (peering_ips_extra_peering_id, peering_ips_extra_addr, peering_ips_extra_active, peering_ips_extra_deployed, peering_ips_extra_created, peering_ips_extra_modified, peering_ips_extra_deleted) values(@peering_id, @addr, 1, 0, NOW(), NOW(), 0);", luje_conn);
+			luje_cmd = new NpgsqlCommand("insert into peering_ips_extra (peering_ips_extra_peering_id, peering_ips_extra_addr, peering_ips_extra_active, peering_ips_extra_deployed, peering_ips_extra_created, peering_ips_extra_modified, peering_ips_extra_deleted) values(@peering_id, @addr, true, false, NOW(), NOW(), false);", luje_conn);
+			luje_cmd.Parameters.AddWithValue("@peering_id", NpgsqlDbType.Integer, Convert.ToInt32(peering_id));
+			luje_cmd.Parameters.AddWithValue("@addr", NpgsqlDbType.Varchar, addr);
 			luje_cmd.Prepare();
-			luje_cmd.Parameters.AddWithValue("@peering_id", peering_id);
-			luje_cmd.Parameters.AddWithValue("@addr", addr);
 			luje_cmd.ExecuteNonQuery();
 		}
 
